--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -1,44 +1,64 @@
 {
-    "2024": {
-        "name": "Portfolio",
-        "slug": "portfolio",
-        "description": "WIP",
-        "thumbnail": "https://picsum.photos/200/150",
-        "images": [
-            "https://picsum.photos/200/150",
-            "https://picsum.photos/200/150",
-            "https://picsum.photos/200/150",
-            "https://picsum.photos/200/150"
-        ],
-        "link": "timvernaeve.be",
-        "date": "2024-17-02"
-    },
-    "2023": {
-        "name": "Buurtplanr",
-        "slug": "buurtplanr",
-        "description": "WIP",
-        "thumbnail": "https://picsum.photos/200/150",
-        "images": [
-            "https://picsum.photos/200/150",
-            "https://picsum.photos/200/150",
-            "https://picsum.photos/200/150",
-            "https://picsum.photos/200/150"
-        ],
-        "link": "https://app.buurtplanr.com/",
-        "date": "2023-16-06"
-    },
-    "2022": {
-        "name": "Donuttello",
-        "slug": "donuttello",
-        "description": "WIP",
-        "thumbnail": "https://picsum.photos/200/150",
-        "images": [
-            "https://picsum.photos/200/150",
-            "https://picsum.photos/200/150",
-            "https://picsum.photos/200/150",
-            "https://picsum.photos/200/150"
-        ],
-        "link": "https://donuttello-digipond.vercel.app/",
-        "date": "2022-12-01"
+  "2024": [
+    {
+      "name": "Portfolio",
+      "slug": "portfolio",
+      "description": "WIP",
+      "thumbnail": "https://picsum.photos/200/150",
+      "images": [
+        "https://picsum.photos/200/150",
+        "https://picsum.photos/200/150",
+        "https://picsum.photos/200/150",
+        "https://picsum.photos/200/150"
+      ],
+      "tags": [
+        "React",
+        "Next.js",
+        "TailwindCSS"
+      ],
+      "link": "timvernaeve.be",
+      "date": "2024-17-02"
     }
+  ],
+  "2023": [
+    {
+      "name": "Buurtplanr",
+      "slug": "buurtplanr",
+      "description": "Buurtplanr was our thesis project, which aimed to allow local townships to invite their citizens to co-create the urban planning of their towns. This was achieved through an online platform where citizens could create their own vision of what the project should look like using a 3D builder. I was responsible for the business, design, and technical setup as well as the follow-up of the project. This included creating the repository, setting up Storybook, Style Dictionary, PostCSS, ESLint, and TypeScript configuration. \n I also encouraged that the rest of the team followed the predefined standards to make the code maintainable and readable for all team members. Additionally I also assisted in creating more complicated components when my team struggled since I had more experience with react and typescript. Our tech stack was: Next.js, Three.js and Node.js (Express.js).",
+      "thumbnail": "https://picsum.photos/200/150",
+      "images": [
+        "https://picsum.photos/200/150",
+        "https://picsum.photos/200/150",
+        "https://picsum.photos/200/150",
+        "https://picsum.photos/200/150"
+      ],
+      "tags": [
+        "React",
+        "Next.js",
+        "PostCSS"
+      ],
+      "link": "https://app.buurtplanr.com/",
+      "date": "2023-16-06"
+    }
+  ],
+  "2022": [
+    {
+      "name": "Donuttello",
+      "slug": "donuttello",
+      "description": "WIP",
+      "thumbnail": "https://picsum.photos/200/150",
+      "images": [
+        "https://picsum.photos/200/150",
+        "https://picsum.photos/200/150",
+        "https://picsum.photos/200/150",
+        "https://picsum.photos/200/150"
+      ],
+      "tags": [
+        "Vue.js",
+        "Three.js"
+      ],
+      "link": "https://donuttello-digipond.vercel.app/",
+      "date": "2022-12-01"
+    }
+  ]
 }
