--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-modal-image": "^2.6.0",
     "use-scramble": "^2.2.15"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal-image": "^2.6.3",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
