--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-modal-image": "^2.6.0",
+    "sharp": "^0.33.2",
     "use-scramble": "^2.2.15"
   },
   "devDependencies": {
