--- a/package.json
+++ b/package.json
@@ -26,8 +26,21 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal-image": "^2.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "autoprefixer": "^10.0.1",
+    "debug": "^4.3.4",
+    "eslint": "8.34.0",
+    "eslint-config-next": "^13.4.1",
+    "eslint-config-standard-jsx": "^11.0.0",
+    "eslint-config-standard-react": "^13.0.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
