--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^7.5.3",
     "@mantine/hooks": "^7.5.3",
     "framer-motion": "^11.0.5",
+    "lenis": "^1.1.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
